[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "twitch-vod-lib"
version = "1.0.0"
description = "Download Twitch VOD metadata, video and chat"
authors = ["Sergey Furmanov"]
readme = "README.md"
license = "MIT"
keywords = ["twitch", "vod", "chat", "downloader"]
packages = [{ include = "twitch_vod" }]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.27"
tenacity = ">=8.2"
structlog = { version = ">=24.0", optional = true }

[tool.poetry.extras]
structlog = ["structlog"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.4"
mypy = ">=1.10"

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
